--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,13 @@
         "bulletsto",
         "dddefault",
         "ddheader",
+        "Fnotioned",
+        "Fnotionpoolcs",
         "homepageurl",
         "logmsg",
+        "notioned",
         "NOTIONTOKEN",
+        "onrender",
         "OPENAIAPIKEY",
         "Pagenation",
         "valign"
